# 2024_Unit_Testing_DM

./: CMakeLists.txt  MNIST.ipynb  README.md  Relation.cpp  Relation.h  RelationTest.cpp  main.cpp
